# GS1Grader

./: .buildinfo  .buildinfo.bak  .gitignore  .gitmodules  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  README.md  genindex.html  index.html  install.sh  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  uninstall.txt
.github/: dependabot.yaml
.github/workflows/: ci.yml  documentation.yml  publish.yml
_modules/: index.html
_modules/gs1grader/: grader_factory.html
_modules/gs1grader/graders/: axial_non_uniformity_grader.html  fixed_pattern_damage_grader.html  grid_non_uniformity_grader.html  modulation_grader.html  symbol_contrast_grader.html  uec_grader.html
_modules/gs1grader/reader/: data_matrix_reader.html
_sources/: index.rst.txt
_sources/api/: grader_api.rst.txt  reader.rst.txt
_sources/usage/: examples.rst.txt
_sources/usage/notebooks/: examples.ipynb.txt
_static/: custom.css
api/: grader_api.html  graders.html  reader.html
core/: common.py  grader_api.py  grader_factory.py  grader_interface.py
core/core/: common.py  grader_api.py  grader_factory.py  grader_interface.py
core/core/graders/: modulation_grader.py  symbol_contrast_grader.py
core/graders/: axial_non_uniformity_grader.py  fixed_pattern_damage_grader.py  grid_non_uniformity_grader.py  modulation_grader.py  symbol_contrast_grader.py  symbol_grader.py  uec_grader.py
core/reader/: data_matrix_decoder.py  data_matrix_reader.py  inference_onnx.py  nn_decoder.py
docs/: conf.py  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: grader_api.rst  graders.rst  reader.rst
docs/source/usage/: examples.rst  installation.rst
docs/source/usage/notebooks/: examples.ipynb
examples/: example_grading.py
src/gs1grader/: grader_api.py
src/gs1grader/graders/: uec_grader.py
tests/: test_example.py
usage/: examples.html
usage/notebooks/: examples.html  examples.ipynb
