[tool.poetry]
name        = "gs1grader"
version     = "0.1.3"
description = "A library for grading Data Matrix codes via GS1 QA metrics"
authors     = ["Ceyeb.org <info@ceyeb.org>"]
readme      = "README.md"
license     = "MIT"
homepage    = "https://github.com/Ceyeborg/GS1Grader"

[tool.poetry.dependencies]
python         = ">=3.6"
matplotlib     = "3.8.2"
numpy          = "1.26.2"
opencv-python  = "4.8.1.78"
pylibdmtx      = "0.1.10"

# â† this must be an array of tables, not a single table
[[tool.poetry.packages]]
include = "gs1grader"
from    = "src"

[build-system]
requires    = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variables = ["setup.py:__version__","src/gs1grader/__init__.py:__version__"]
upload_to_pypi = true
upload_to_release = false
build_command = "pip install poetry && poetry build"
