[tool.poetry]
name        = "gs1grader"
version     = "0.1.2"
description = "A library for grading Data Matrix codes via GS1 QA metrics"
authors     = ["Ceyeb.org <info@ceyeb.org>"]
readme      = "README.md"
license     = "MIT"
homepage    = "https://github.com/Ceyeborg/GS1Grader"

[tool.poetry.dependencies]
python         = ">=3.9,<3.13"
matplotlib     = "3.8.2"
numpy          = "1.26.2"
opencv-python  = "4.8.1.78"
pylibdmtx      = {git = "https://github.com/Ceyeborg/pylibdmtx", rev = "gs1grader"}

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
flake8 = "*"
coverage = "*"

# â† this must be an array of tables, not a single table
[[tool.poetry.packages]]
include = "gs1grader"
from    = "src"

[build-system]
requires    = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variables = ["setup.py:__version__", "src/gs1grader/__init__.py:__version__"]
upload_to_pypi = true
upload_to_release = false
build_command = "pip install poetry && poetry build"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = false

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = false

[tool.black]
target-version = ['py311']
line-length = 160
skip_magic_trailing_comma = true

[tool.flake8]
max-line-length = 160

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 160

[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
omit = ["tests"]